fix: menu cut off on scrolling

--- a/src/templates/module_40_navigation/styles.less
+++ b/src/templates/module_40_navigation/styles.less
@@ -126,7 +126,7 @@
 .nav {
 	position: fixed;
 	width: 100%;
-	height: 100%;
+	height: 120vh;
 	top: 0;
 	right: 0;
 	bottom: 0;
@@ -255,7 +255,7 @@
 		}
 	}
 	~ .nav {
-		transform: none;
+		transform: translate3d(0,0,0);
 		transition: background-color 300ms ease-in-out;
 		background-color: fadeout(#16181e, 10%);
 		.mainnav {
